// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has more disables load more 1`] = `
<Localized
  attrs={
    Object {
      "aria-label": true,
    }
  }
  id="profile-commentHistory-section"
>
  <section
    aria-label="Comment History"
  >
    <ForwardRef(forwardRef)
      aria-live="off"
      data-testid="profile-commentHistory"
      id="coral-profile-commentHistory-log"
      role="log"
      size="double"
    >
      <Relay(HistoryCommentContainer)
        comment={
          Object {
            "id": "comment-1",
          }
        }
        settings={Object {}}
        story={Object {}}
      />
      <Relay(HistoryCommentContainer)
        comment={
          Object {
            "id": "comment-2",
          }
        }
        settings={Object {}}
        story={Object {}}
      />
      <Localized
        id="profile-commentHistory-loadMore"
      >
        <ForwardRef(forwardRef)
          aria-controls="coral-profile-commentHistory-log"
          className="coral coral-loadMoreButton coral-myComments-loadMoreButton"
          classes={
            Object {
              "active": "CommentHistory-active",
              "colorRegular": "CommentHistory-colorRegular",
              "disabled": "CommentHistory-disabled",
              "mouseHover": "CommentHistory-mouseHover",
              "variantOutline": "CommentHistory-loadMore",
            }
          }
          color="regular"
          disabled={true}
          fullWidth={true}
          id="coral-profile-commentHistory-loadMore"
          onClick={[Function]}
          variant="outlined"
        >
          Load More
        </ForwardRef(forwardRef)>
      </Localized>
    </ForwardRef(forwardRef)>
  </section>
</Localized>
`;

exports[`has more renders correctly 1`] = `
<Localized
  attrs={
    Object {
      "aria-label": true,
    }
  }
  id="profile-commentHistory-section"
>
  <section
    aria-label="Comment History"
  >
    <ForwardRef(forwardRef)
      aria-live="off"
      data-testid="profile-commentHistory"
      id="coral-profile-commentHistory-log"
      role="log"
      size="double"
    >
      <Relay(HistoryCommentContainer)
        comment={
          Object {
            "id": "comment-1",
          }
        }
        settings={Object {}}
        story={Object {}}
      />
      <Relay(HistoryCommentContainer)
        comment={
          Object {
            "id": "comment-2",
          }
        }
        settings={Object {}}
        story={Object {}}
      />
      <Localized
        id="profile-commentHistory-loadMore"
      >
        <ForwardRef(forwardRef)
          aria-controls="coral-profile-commentHistory-log"
          className="coral coral-loadMoreButton coral-myComments-loadMoreButton"
          classes={
            Object {
              "active": "CommentHistory-active",
              "colorRegular": "CommentHistory-colorRegular",
              "disabled": "CommentHistory-disabled",
              "mouseHover": "CommentHistory-mouseHover",
              "variantOutline": "CommentHistory-loadMore",
            }
          }
          color="regular"
          disabled={false}
          fullWidth={true}
          id="coral-profile-commentHistory-loadMore"
          onClick={[Function]}
          variant="outlined"
        >
          Load More
        </ForwardRef(forwardRef)>
      </Localized>
    </ForwardRef(forwardRef)>
  </section>
</Localized>
`;

exports[`renders correctly 1`] = `
<Localized
  attrs={
    Object {
      "aria-label": true,
    }
  }
  id="profile-commentHistory-section"
>
  <section
    aria-label="Comment History"
  >
    <ForwardRef(forwardRef)
      aria-live="off"
      data-testid="profile-commentHistory"
      id="coral-profile-commentHistory-log"
      role="log"
      size="double"
    >
      <Relay(HistoryCommentContainer)
        comment={
          Object {
            "id": "comment-1",
          }
        }
        settings={Object {}}
        story={Object {}}
      />
      <Relay(HistoryCommentContainer)
        comment={
          Object {
            "id": "comment-2",
          }
        }
        settings={Object {}}
        story={Object {}}
      />
    </ForwardRef(forwardRef)>
  </section>
</Localized>
`;
